/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.shared;

option java_package = "com.google.wireless.qa.mobileharness.shared.proto";
option java_multiple_files = true;

message USB {
  // USB host bus number of the device.
  //
  // For example, if "adb devices -l" returns:
  // List of devices attached
  // 363005DC750400EC  device  usb:3-11.4 ...
  //
  // The hostBus for "363005DC750400EC" is 3.
  int32 host_bus = 1;
  // USB host bus port number of the device.
  //
  // For example, if "adb devices -l" returns:
  // List of devices attached
  // 363005DC750400EC  device  usb:3-11.4 ...
  //
  // The hostPort for "363005DC750400EC" is "11.4".
  string host_port = 2;
  // Whether the usb address is managed by ADB.
  bool adb_managed = 3;
  // Optional. The USB serial of the device. Some drivers can get the host_bus
  // and host_port from the serial.
  string serial = 4;
}

message SSH {
  string ip = 1;
  int32 port = 2;
  string username = 3;
  string password = 4;
}

message ADB {
  string serial = 1;
}

message Communication {
  oneof communication {
    USB usb = 1;
    SSH ssh = 2;
    ADB adb = 3;
  }
}

message CommunicationList {
  repeated Communication communication = 1;
}
